--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -26,7 +26,7 @@
      555555555          000000000          000000000</pre>
         <p>
         {% if g.user and g.user.is_authenticated %}
-            <a href="{{ url_for('user', x_number=g.user.x_number) }}" class="button button-primary u-full-width">Back to profile</a>
+            <a href="{{ url_for('users.user', nickname=g.user.nickname) }}" class="button button-primary u-full-width">Back to profile</a>
         {% else %}
             <a href="{{ url_for('index') }}" class="button button-primary u-full-width">Back to front page</a>
         {% endif %}
