--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,8 @@
                             <a href="{{ url_for('users.login') }}" title="Log In" class="button button-login button-primary u-pull-right">Log In</a>
                             <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
                         {% endif %}
+                    {% else %}
+                            <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
                     {% endif %}
                 </div>
             </div>
