Working Facebook login

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -63,5 +63,9 @@ $(document).ready(function() {
         <div class="three columns">
             <a href="{{ url_for('google.login') }}" class="button u-full-width">Log In with Google</a>
         </div>
+        <div class="three columns">
+            <a href="{{ url_for('facebook.login') }}" class="button
+                u-full-width">Log In with Facebook</a>
+        </div>
     </div>
 {% endblock %}
