--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -35,7 +35,9 @@ section (app/templates/styleguide/templating#cause-helpers)
             <strong>{{ action.heading }}</strong>
             <p>{{ action.description }}</p>
             <h6 class="u-remove-margin-bottom">Supporters: {{ action.supporters }}</h6>
+            {% if action.expiration %}
             <h6>Expires: {{ action.expiration.strftime('%b. %d, %Y') }}</h6>
+            {% endif %}
         </a>
     {% endfor %}
 {% endmacro %}
