--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -309,10 +309,11 @@ small {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .modal {
     visibility: hidden;
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
+    height: 100%;
     text-align: center;
     z-index: 1000;
     background-color: #000;
@@ -325,6 +326,7 @@ small {
     border: 1px solid #000;
     padding: 15px;
     border-radius: 4px;
+    text-align: left;
 }
 
 
