--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -1,3 +1,8 @@
+<!-- If you add another macro to this file or significatly edit an existing one, 
+dont' forget to add a description of your changes to the appropriate styleguide
+section (app/templates/styleguide/templating#cause-helpers)
+-->
+
 {% macro render_cause_info(caption, info) %}
 <p class="u-cf u-remove-margin-bottom">
     <strong>{{ caption }}</strong>
