--- a/app/templates/helpers/navigation.html
+++ b/app/templates/helpers/navigation.html
@@ -1,6 +1,6 @@
 <!-- If you add another macro to this file or significatly edit an existing one, 
 dont' forget to add a description of your changes to the appropriate styleguide
-section (app/templates/styleguide/templating.html#navigation-helpers)
+section (app/templates/styleguide/templating#navigation-helpers)
 -->
 
 {% macro render_cause_nav(active_section, cause) %}
@@ -66,14 +66,14 @@ section (app/templates/styleguide/templating.html#navigation-helpers)
         <li {% if active_section == "styleguide_alerts" %}class="active"{% endif %}>
             <a href="{{ url_for('styleguide.alerts') }}">Alerts</a>
         </li>
+        <li {% if active_section == "styleguide_modals" %}class="active"{% endif %}>
+            <a href="{{ url_for('styleguide.modals') }}">Modals</a>
+        </li>
         <li {% if active_section == "styleguide_utilities" %}class="active"{% endif %}>
             <a href="{{ url_for('styleguide.utilities') }}">Utilities</a>
         </li>
         <li {% if active_section == "styleguide_media_queries" %}class="active"{% endif %}>
             <a href="{{ url_for('styleguide.media_queries') }}">Media Queries</a>
-        </li>
-        <li {% if active_section == "styleguide_modals" %}class="active"{% endif %}>
-            <a href="{{ url_for('styleguide.modals') }}">Modals</a>
         </li>
         <li {% if active_section == "styleguide_templating" %}class="active"{% endif %}>
             <a href="{{ url_for('styleguide.templating') }}">Templating</a>
