--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -314,17 +314,16 @@ small {
     top: 0px;
     width: 100%;
     height: 100%;
-    text-align: center;
     z-index: 1000;
+    text-align: center;
     background-color: #000;
-    opacity: 0.5;
+    background: url(../images/transparent-pixel.png);
 }
 .modal div {
     width: 300px;
     margin: 100px auto;
-    background-color: #fff;
-    border: 1px solid #000;
     padding: 15px;
+    background-color: #fff;
     border-radius: 4px;
     text-align: left;
 }
