--- a/app/templates/helpers/forms.html
+++ b/app/templates/helpers/forms.html
@@ -1,6 +1,6 @@
 <!-- If you add another macro to this file or significatly edit an existing one, 
 dont' forget to add a description of your changes to the appropriate styleguide
-section (app/templates/styleguide/templating.html#form-helpers)
+section (app/templates/styleguide/templating#form-helpers)
 -->
 
 {% macro render_boolean(bool) %}
