--- a/app/templates/styleguide/alerts.html
+++ b/app/templates/styleguide/alerts.html
@@ -2,18 +2,13 @@
 {% set active_page = "styleguide_alerts" %}
 
 {% block scripts %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/scroll-spy.js') }}"></script>
 {% endblock %}
 
 {% block content %}
 {% from "helpers/navigation.html" import render_styleguide_nav, render_scrollspy %}
+{% from "helpers/styleguide.html" import render_header %}
 <div class="row">
-    <div class="eight columns">
-        <h1 class="u-remove-margin-bottom">Style Guide</h1>
-    </div>
-    <div class="four columns">
-        <h1 class="u-remove-margin-bottom u-text-right"><small>v 0.1.0</small></h1>
-    </div>
+    {{ render_header(title, version) }}
 </div>
 <hr class="u-remove-margin-bottom">
 <div class="row">
@@ -37,10 +32,6 @@
 &lt;div class="flash warning" role="alert"&gt;Example of a warning flashed message&lt;/div&gt;
 &lt;div class="flash error" role="alert"&gt;Example of an error flashed message&lt;/div&gt;</pre>
 
-    </div>
-
-    <div class="three columns">
-        {{ render_scrollspy() }}
     </div>
 
 </div>
