--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -16,13 +16,9 @@ $(document).ready(function() {
 
 {% block content %}
 {% from "helpers/navigation.html" import render_styleguide_nav, render_scrollspy %}
+{% from "helpers/styleguide.html" import render_header %}
 <div class="row">
-    <div class="eight columns">
-        <h1 class="u-remove-margin-bottom">Style Guide</h1>
-    </div>
-    <div class="four columns">
-        <h1 class="u-remove-margin-bottom u-text-right"><small>v 0.1.0</small></h1>
-    </div>
+    {{ render_header(title, version) }}
 </div>
 <hr class="u-remove-margin-bottom">
 <div class="row">
