--- a/app/templates/styleguide/modals.html
+++ b/app/templates/styleguide/modals.html
@@ -2,6 +2,7 @@
 {% set active_page = "styleguide_modals" %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/modal.js') }}"></script>
 {% endblock %}
 
 {% block content %}
