Basic action supporting, fix action editing

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -41,7 +41,7 @@
         <span>({{ cause.actions.count() }} current)</span>
     </h2>
     <div class="twelve columns">
-        {{ render_cause_support_actions('', cause.actions.all()) }}
+        {{ render_cause_support_actions('', cause) }}
     </div>
 </div>
 <div class="row u-add-margin-top">
