--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,11 @@
                     {% if active_page != "login" %}
                         {% if current_user.is_authenticated %} 
                             <a href="{{ url_for('users.logout') }}" title="Log Out" class="button u-pull-right"><!--<img src="{# url_for('static', filename='open-iconic/svg/account-logout.svg') #}">-->Log Out</a>
+                            <span class="user">
+                                Logged in as <a href="{{ url_for('users.user', nickname=current_user.nickname) }}">
+                                    {{ current_user.nickname }}
+                                </a>
+                            </span>
                         {% else %}
                             <a href="{{ url_for('users.login') }}" title="Log In" class="button button-login button-primary u-pull-right">Log In</a>
                             <a href="{{ url_for('users.signup') }}" title="Sign Up" class="button u-pull-right">Sign Up</a>
