--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -6,7 +6,6 @@
 {% endblock %}
 
 {% block content %}
-{% from "helpers/causes.html" import render_cause_info, render_cause_stat, render_cause_support_actions %}
 <div class="masthead"
         {% if cause.image %}style="background-image: linear-gradient(190deg, rgba(255, 255, 255, 0), white, white), url({{ url_for('static', filename=cause.image) }});"{% endif %}>
     <div class="row" >
@@ -97,6 +96,8 @@
     <h2 class="twelve columns">
         Conversation
     </h2>
+    {% from "helpers/posts.html" import render_post_list %}
+    {{ render_post_list(cause) }}
 </div>
 
 <div id="modal-support" class="modal">
